--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loan-calculations",
-  "version": "1.8.2",
+  "version": "1.8.3",
   "packageManager": "npm",
   "scripts": {
     "dev": "vite",
@@ -29,8 +29,8 @@
     "jsdom": "^22.0.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
-    "typescript": "~5.2.2",
-    "vite": "^4.0.1",
+    "typescript": "^5.3.2",
+    "vite": "^5.0.2",
     "vitest": "^0.34.3",
     "vue-tsc": "^1.0.8"
   }
