--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "loan-calculations",
-  "version": "1.8.3",
+  "version": "1.8.4",
+  "type": "module",
   "packageManager": "npm",
   "scripts": {
     "dev": "vite",
@@ -23,15 +24,15 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/test-utils": "^2.1.0",
-    "@vue/tsconfig": "^0.4.0",
+    "@vue/tsconfig": "^0.5.1",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
-    "jsdom": "^22.0.0",
+    "jsdom": "^23.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
     "typescript": "^5.3.2",
     "vite": "^5.0.2",
-    "vitest": "^0.34.3",
+    "vitest": "^1.1.0",
     "vue-tsc": "^1.0.8"
   }
 }
