--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loan-calculations",
-  "version": "1.9.4",
+  "version": "1.9.5",
   "type": "module",
   "packageManager": "npm",
   "scripts": {
@@ -24,14 +24,14 @@
     "@vue/eslint-config-prettier": "^10.0.0",
     "@vue/eslint-config-typescript": "^14.0.0",
     "@vue/test-utils": "^2.1.0",
-    "@vue/tsconfig": "^0.5.1",
+    "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.12.0",
     "eslint-plugin-vue": "^9.3.0",
     "jsdom": "^25.0.1",
     "npm-run-all": "^4.1.5",
     "prettier": "^3.0.0",
-    "typescript": "^5.3.2",
-    "vite": "^5.0.2",
+    "typescript": "~5.6.3",
+    "vite": "^6.0.2",
     "vitest": "^2.0.5",
     "vue-tsc": "^2.0.6"
   }
